# stickybugs-ai

./: 000_data_preparation.py  001_Data_preparation.ipynb  001_data_cleaning.py  002_Model_training.ipynb  002_data_splitting.py  003_Results.ipynb  003_model_training.py  004_Explainability.ipynb  004_Explainability_CAM.ipynb  004_Explainability_FilterViz.ipynb  004_Explainability_SHAP.ipynb  004_model_results.py  005_results_visualizations.py  010_CleanLab_data_cleaning.ipynb  010_Object_Detection_SAHI.ipynb  100_Save_some_sampled_images_for_figures.ipynb  App_InferenceTime.py  README.md  config.ini  config.yaml  datasets.py  edit_config_file.py  mamba_bugai.yml  mamba_requirements.txt  pyproject.toml  read_config_file.py  requirements_tmp.txt  run_000_data_preparations.sh  run_001_data_cleanings.sh  run_002_data_splitting.sh  run_003_004_model_training_model_results.sh  run_005_results_visualization.sh  run_010_cumulative_weeks.sh  settings.py  test.ipynb  utils.py  utils_test.py
notebooks/: 01_Resultaat reeks1_2_3_WD.xlsx  COI_analysis_data.ipynb  Counts_plot.ipynb  timm_EXPORATIONS.ipynb
