[project]
name = "stickybugs-ai"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Yannis", email = "ioannis.kalfas@kuleuven.be" }
]
dependencies = [
    "jupyterlab==4.0.8",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "torchvision>=0.16.0",
    "seaborn>=0.13.0",
    "tqdm==4.66.1",
    "scikit-learn==1.3.2",
    "opencv-contrib-python==4.8.1.78",
    "timm==0.9.10",
    "pyod==1.1.1",
    "pyarrow==14.0.1",
    "matplotlib==3.8.1",
    "numpy==1.26.2",
    "pandas==2.1.3",
    "fastparquet==2023.10.1",
    "isort==5.12.0",
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "shellingham>=1.5.4",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
